syntax = "proto3";

service TradeEngine {
  rpc Process(NewOrderRequest) returns (OrderResponse) {}
  rpc Cancel(OrderRequest) returns (StatusResponse) {}
  rpc FindOrder(OrderRequest) returns (OrderResponse) {}
  rpc FindUserOrders(UserOrdersRequest) returns (OrdersPageResponse) {}
}

// Requests
message OrderRequest{
  string orderID = 1;
  string userID = 2;
}

message UserOrdersRequest{
  string userID = 1;
  uint32 page = 2;
  uint32 pageSize = 3;
  string status = 4;
}

message NewOrderRequest {
  string userID  = 1;
  string marketName = 2;
  string side = 3;
  uint64 amount = 4;
  uint64 price = 5;
}

// Responses
message Order {
  string orderID = 1;
  string userID = 2;
  string marketName = 3;
  string side = 4;
  uint64 price = 5;
  uint64 amount = 6;
  uint64 filled = 7;
  string status = 8;
  string createdOn = 9;
  string updatedOn = 10;
}

message OrderData {
  Order order = 1;
}

message OrdersPage {
  uint32 page = 1;
  uint32 pageSize = 2; 
  uint32 total = 3;
  repeated Order orders = 4; 
}

message OrdersPageResponse {
  string status = 1;
  string message = 2;
  OrdersPage data = 3;
}

message OrderResponse {
  string status = 1;
  string message = 2;
  OrderData data = 3;
}

message StatusResponse {
  string status = 1;
  string message = 2;
}
